thule-email-service/k8s/cit.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: thule-email-service
  namespace: thule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thule-email-service
      namespace: thule
  template:
    metadata:
      labels:
        app: thule-email-service
        namespace: thule
    spec:
      serviceAccountName: thule-email-service-account
      containers:
        - name: thule-email-service
          image: pooh:8082/thule-email-service:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 8080
              name: service-port
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            periodSeconds: 30
            timeoutSeconds: 10
      hostAliases:
        - ip: 192.168.0.102
          hostnames:
            - pooh
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/thule-email-service"
  name: thule-email-service-ingress
  namespace: thule
spec:
  rules:
    - host: piglet
      http:
        paths:
          - path: /thule-email-service(/|$)(.*)
            backend:
              serviceName: thule-email-service
              servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: thule-email-service
  namespace: thule
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: thule-email-service
    namespace: thule
